--- a/install/lang/en.csv
+++ b/install/lang/en.csv
@@ -13,6 +13,7 @@ shop.order_status_CN;Credit note
 action.logout;Sign Out
 label.edit_address;Edit address
 label.new_address;New address
+simpleshop.cash;Cash
 simpleshop.account_area_account;Account
 label.address;Address
 label.pages;Pages
