--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -99,6 +99,7 @@ action.remove_all_variants = Alle Varianten entfernen
 action.remove = entfernen
 action.use_invoicing = Rechnungslegung verwenden
 
+error.select_has_not_existing_variant = Achtung dieses Produkt besteht aus Varianten die nicht mehr existieren. Bitte kontrolliere die Daten und speichere das Produkt ab
 error.cannot_delete_category = Die Kategorie "{{name}}" kann nicht gelöscht werden da folgende Produkte noch verlinkt sind
 error.cannot_delete_tax = Der Steuersatz "{{name}}" kann nicht gelöscht werden da folgende Produkte noch verlinkt sind
 error.cannot_delete_feature = Die Eigenschaft "{{name}}" kann nicht gelöscht werden da folgende Werte noch verlinkt sind
